completed v.1 of CapnpCreator